Fixed some spacing and uniformity on the receipts show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,6 +52,7 @@ a, a:link, a:visited {
 
 a:hover, a:active {
   color: #990000;
+  cursor: pointer;
 }
 
 /*buttons*/
